Fix styles for readability

--- a/source/css/dark.css
+++ b/source/css/dark.css
@@ -1,6 +1,13 @@
 body {
-  background: #000000;
+  background: #11111a;
   color: #e0e0e0;
+}
+
+a {
+  color: #4499cc;
+}
+a:visited {
+  color: #7d26cd;
 }
 
 button, select, .share {
